--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -1,5 +1,3 @@
 {block content}
-<p>WHY IS FOLLOWING LINK <b>/account.home/</b> instead <b>/account/home/</b> ? <a href="{plink :Account:Home:}">GO TO ACCOUNT MODULE</a></p>
-
-<p>CAN I ADD CONTROLL "TopBar" FROM MODULE "Account" HERE?</p>
+<p>HOW TO ADD CONTROL "LoginPanel" FROM MODULE "Account" HERE?</p>
 {/block}
